tests/fixtures/invalid/none_mul_int.py
# Cannot multiply None and Int
x: int = None * 1
